feat(backend): update Ns Jail Executor (src/main/java/com/openquiz/service/executor/NsJailExecutor.java)